# matrix-free-dealii-precice

./: .clang-format  .clang-tidy  .pre-commit-config.yaml  CMakeLists.txt  README.md  cook_mf_gmg.prm  elasticity.prm  heat_transfer.prm  parameter.prm  parameters.prm  version.cc
.github/workflows/: backward_compatibility.yml  building.yml  github_ci.yml  heat_transfer_ci.yml  indent.yml  solid_mechanics_ci.yml
examples/: precice-config.xml  tube3d.prm
examples/Wall_beam/: precice-config.xml
examples/Wall_beam/fluid-openfoam/0.orig/: U  p  pointDisplacement
examples/Wall_beam/fluid-openfoam/constant/: transportProperties
examples/Wall_beam/fluid-openfoam/system/: blockMeshDict  controlDict  decomposeParDict  fvSchemes  fvSolution  preciceDict
examples/Wall_beam/solid/: Wall_beam.prm
examples/bending_flap/: precice-config.xml
examples/bending_flap/fluid-openfoam/: removeObsoleteFolders.sh
examples/bending_flap/fluid-openfoam/0.orig/: U  p  phi  pointDisplacement
examples/bending_flap/fluid-openfoam/constant/: transportProperties
examples/bending_flap/fluid-openfoam/system/: controlDict  fvSolution  preciceDict
examples/bending_flap/solid/: bending_flap.prm
examples/fluid-bending-flap/: linear_elasticity  run.sh
examples/fluid-bending-flap/0.orig/: U  p
examples/fluid-bending-flap/system/: blockMeshDict  decomposeParDict
examples/partitioned-heat-conduction/: dirichlet.prm  neumann.prm  precice-config.xml
examples/tube3d/: precice-config.xml
examples/tube3d/fluid-openfoam/: README.md
examples/tube3d/solid/: tube3d.prm
examples/wall_flag/: blockMeshDict
include/: config.h  config.h.in  material.h  mf_ad_nh_operator.h  mf_elasticity.h  mf_nh_operator.h  parameter_handling.h  precice_adapter.h  precice_parameter.h  q_equidistant.h  template_list.h  version.h
include/adapter/: arbitrary_interface.h  boundary_mass_operator.h  boundary_projector.h  coupling_interface.h  dealii_interface.h  dof_interface.h  overlapping-interface.h  precice_adapter.h  quad_interface.h
include/base/: checkpoint.h  dof_tools_extension.h  fe_integrator.h  q_equidistant.h  restart.h  time_handler.h  utilities.h  vector_tools_extension.h  version.h
include/cases/: Wall_beam.h  bending_flap.h  case_base.h  case_selector.h  case_template.h  cook_membrane.h  perpendicular_flap.h  tube_3d.h  turek_hron.h
include/cases/elasticity/: cook_membrane.h  mesh_in.h  pulling_tendon.h  tendon.h  tube_3d.h  turek_hron.h
include/cases/heat_transfer/: partitioned_heat.h
include/heat_transfer/: cuda_laplace_operator.h  heat_transfer.h  laplace_operator.h
include/parameter/: parameter_handling.h  precice_parameter.h
include/solid_mechanics/: material.h  mf_elasticity.h  mf_nh_operator.h
include/solver/: mg_solver.h
src/: heat.cc  heat.cu  main.cc  mf_elasticity.cc  solid.cc  version.cc.in
tests/: CMakeLists.txt  README.md  clean_tests.sh  cook_gmg.output  cook_gmg.prm  cook_gmg_form1_tensor2.output  cook_gmg_form1_tensor2.prm  cook_gmg_form1_tensor4_ns.prm  cook_jacobi.output  cook_jacobi.prm  cook_jacobi_form1_tensor4.output  cook_jacobi_form1_tensor4.prm  prepare_test.cmake  run_coupled_test.sh  run_tests.sh
tests/dummy_tester/: dummy_tester.cpp  precice-config_unified.xml
tests/dummy_tester/turek_gmg_scalar/: turek_gmg_scalar.output  turek_gmg_scalar.prm
tests/dummy_tester/turek_gmg_scalar_form0/: turek_gmg_scalar_form0.prm  turek_gmg_scalar_form0_parallel.output  turek_gmg_scalar_form0_serial.output
tests/dummy_tester/turek_gmg_scalar_referential/: turek_gmg_scalar_referential.prm
tests/dummy_tester/turek_gmg_tensor2/: turek_gmg_tensor2.prm
tests/dummy_tester/turek_gmg_tensor2_form0/: turek_gmg_tensor2_form0.prm  turek_gmg_tensor2_form0_serial.output
tests/dummy_tester/turek_gmg_tensor4/: turek_gmg_tensor4.prm
tests/dummy_tester/turek_gmg_tensor4_ns/: turek_gmg_tensor4_ns.prm  turek_gmg_tensor4_ns_serial.output
tests/dummy_tester/turek_jacobi_tensor2/: turek_jacobi_tensor2.prm  turek_jacobi_tensor2_parallel.output  turek_jacobi_tensor2_serial.output
tests/heat/: clean_tests.sh  run_tests.sh
tests/heat/partitioned-heat/: dirichlet.prm  neumann.prm  partitioned-heat_parallel.output  partitioned-heat_serial.output  precice-config.xml
tests/heat/partitioned-heat-direct-access/: dirichlet.prm  neumann.prm  partitioned-heat-direct-access_parallel.output  partitioned-heat-direct-access_serial.output  precice-config.xml
tests/solid/: CMakeLists.txt  clean_tests.sh  dummy_tester.cpp  precice-config_unified.xml  run_tests.sh
tests/solid/turek_gmg_scalar_referential/: turek_gmg_scalar_referential.prm  turek_gmg_scalar_referential_parallel.output
tests/solid/turek_gmg_tensor2/: turek_gmg_tensor2.prm  turek_gmg_tensor2_parallel.output
tests/solid/turek_gmg_tensor2_form0/: turek_gmg_tensor2_form0.prm  turek_gmg_tensor2_form0_serial.output
tests/solid/turek_gmg_tensor4/: turek_gmg_tensor4.prm
tests/solid/turek_gmg_tensor4_ns/: turek_gmg_tensor4_ns.prm  turek_gmg_tensor4_ns_serial.output
tests/solid/turek_jacobi_tensor2/: turek_jacobi_tensor2.prm  turek_jacobi_tensor2_parallel.output  turek_jacobi_tensor2_serial.output
utilities/: Dockerfile  Dockerfile.dealiiv94  check_duplicate_nodes.py  convert_png_to_mp4.sh  run_clang_tidy.sh
